<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <EditText
        android:id="@+id/addressType"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10.0dip"
        android:ems="10"
        android:hint="@string/HomeWorkAddress" />

    <EditText
        android:id="@+id/street"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10.0dip"
        android:ems="10"
        android:hint="@string/Street" />

    <EditText
        android:id="@+id/number"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10.0dip"
        android:ems="10"
        android:hint="@string/Number" />

    <EditText
        android:id="@+id/city"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10.0dip"
        android:ems="10"
        android:hint="@string/City" />

    <EditText
        android:id="@+id/state"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10.0dip"
        android:ems="10"
        android:hint="@string/State" />

    <EditText
        android:id="@+id/zipCode"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10.0dip"
        android:ems="10"
        android:hint="@string/ZipCode" />

    <Button
        android:id="@+id/save_address"
        android:layout_width="200.0dip"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40.0dip"
        android:clickable="true"
        android:hint="@string/SaveAddress"
        android:text="@string/SaveAddress" />

</LinearLayout>