<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <TextView
        android:id="@+id/newContact"
        style="@style/Base.V7.Theme.AppCompat.Light"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15.0dip"
        android:text="@string/newContact"
        android:textAppearance="?android:textAppearanceLarge" />

    <EditText
        android:id="@+id/firstName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10.0dip"
        android:ems="10"
        android:hint="@string/FirstName"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/lastName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10.0dip"
        android:ems="10"
        android:hint="@string/LastName"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/cellPhone"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10.0dip"
        android:ems="10"
        android:hint="@string/CellPhone"
        android:inputType="phone" />

    <EditText
        android:id="@+id/workPhone"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10.0dip"
        android:ems="10"
        android:hint="@string/WorkPhone"
        android:inputType="phone" />

    <EditText
        android:id="@+id/email"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10.0dip"
        android:ems="10"
        android:hint="@string/Email"
        android:inputType="textEmailAddress" />

    <Button
        android:id="@+id/add"
        style="@style/Base.V7.Theme.AppCompat.Light"
        android:layout_width="200.0dip"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20.0dip"
        android:clickable="true"
        android:hint="@string/contactAdd"
        android:onClick="connect"
        android:text="@string/contactAdd" />

</LinearLayout>